--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,8 +24,10 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.38.0",
     "react-redux": "^8.0.4",
     "react-resize-detector": "^7.1.2",
+    "react-toastify": "^9.0.8",
     "redux": "^4.2.0",
     "swr": "^1.3.0"
   },
