--- a/backend/Makefile
+++ b/backend/Makefile
@@ -17,7 +17,7 @@ init:
 
 _init:
 	composer install
-	php artisan breeze:install api
+	cp .env.example .env
 	php artisan key:generate
 	php artisan migrate
 	php artisan db:seed
